[package]
name = "api_service"
version = "1.3.12"
authors = [ "Arnaud Rocher <arnaud.roche3@gmail.com>" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-std = { version = "1.11.0", features = [ "attributes" ] }
async-trait = "0.1.53"
csv-async = "1.2.4"
dotenv = "0.15.0"
envconfig = "0.10.0"
futures = "0.3.21"
indexmap = { version = "1.8.1", features = [ "serde" ] }
regex = "1.5.6"
serde = { version = "1.0.137", features = [ "derive" ] }
serde_json = "1.0.81"
signal-hook = "0.3.14"
signal-hook-async-std = "0.2.2"
tide = "0.16.0"
toml = "0.5.9"
url = "2.2.2"

[dependencies.chrono]
version = "0.4.19"
default-features = false
features = [ "std", "serde" ]

[dependencies.surf]
version = "2.3.2"
default-features = false
features = [ "h1-client" ]

[dev-dependencies]
assert_matches = "1.5.0"
indoc = "1.0.6"
insta = "1.15.0"
test-case = "2.1.0"
